# phos

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  pattern.rs  pattern_builder.rs  prelude.rs  tests.rs
src/core/: mod.rs
