[package]
name = "phos"
version = "0.0.2"
edition = "2021"
authors = ["Thomas Reddy <contact@thomasreddy.com>"]
description = "A rust crate for a regex-like pattern matcher/permutation generator."
keywords = ["pattern", "match", "regex", "permutation", "combination"]
repository = "https://github.com/Augigogigi/phos"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
